# smooth-mppi-cuda

./: .gitignore  CMakeLists.txt  README.md  package.xml
claude_log/: bugfix_2026-06-25.md
config/: f1tenth_mppi_params.yaml  mppi_params.yaml  params.yaml
data/icra2025/: icra2025_centerline.csv
data/map1/: map1_centerline.csv  map1_map.pgm  map1_map.yaml
include/cuda_mppi_controller/: cuda_mppi_core.hpp  overtake_fsm.hpp
launch/: cuda_mppi.launch.py  f1tenth_mppi.launch.py  smppi_sim_overtake.launch.py  smppi_with_ekf_overtake.launch.py
msg/: MppiTrajectory.msg
scripts/: optimizer.py
scripts/result/: mppi_optimization_results.csv
src/: cuda_mppi_node.cpp  mppi_core.cu  opponent_tracker.cpp  overtake_fsm.cpp  path_publisher.cpp  smppi_node.cpp  smppi_node_fsm.cpp
