<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cuda_mppi_controller</name>
  <version>0.0.0</version>
  <description>
    CUDA-accelerated MPPI (Model Predictive Path Integral) controller 
    for F1TENTH autonomous racing. Real-time trajectory optimization 
    on NVIDIA GPUs using parallel sampling and cost minimization.
  </description>
  <maintainer email="jangjh1995@naver.com">JangJunhyeok</maintainer>
  <license>MIT</license>
  <author email="jangjh1995@naver.com">JangJunhyeok</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rosidl_typesupport_fastrtps_cpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
